--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,19 @@ body{
         grid-template-columns: 1fr;
     }
  }
+
+ .vi-container-vertical{
+    margin-left: calc(var(--sidebar-width));
+    padding: 20px;
+    padding-top: calc(var(--menu-top-size) + 20px);
+    display: grid;
+    gap: 20px;
+}
+
+.vi-container-title{
+    font-size: 16px;
+    font-weight: bold;
+}
 /*common CSS*/
 
 /*navbar css start*/
@@ -134,6 +147,11 @@ body{
     cursor: pointer;
 }
 
+.sidebar ul a{
+    text-decoration: none;
+    color: inherit;
+}
+
 .sidebar ul li:hover{
     background-color: rgba(0, 0, 0, 0.05);
 }
@@ -158,7 +176,7 @@ body{
 }
 
 @media screen and (max-width: 992px) {
-    .vi-container{
+    .vi-container, .vi-container-vertical{
         margin-left: inherit;
     }
 
@@ -169,7 +187,7 @@ body{
 /*sidebar css end*/
 
 
-/*youtuble list card start*/
+/*video vertical card start*/
 .vi-card{
     display: flex;
     flex-direction: column;
@@ -203,4 +221,60 @@ body{
     color: rgb(80, 80, 80);
     line-height: 18px;
 }
-/*youtube list card end*/
+/*video vertical card end*/
+
+/*video hoirzontal card start*/
+.vi-card-hr{
+    display: flex;
+    max-height: 200px;
+    cursor: pointer;
+    justify-content: flex-start;
+}
+
+.vi-card-hr .vi-card-hr-body{
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+    margin-top: 10px;
+    max-width: 600px;
+}
+
+.vi-card-hr-tumbnail{
+    display: flex;
+    margin-right: 16px;
+    max-height: 180px;
+    width: 300px;
+}
+
+.vi-card-hr-img{
+    height: 100%;
+    width: 100%;
+    object-fit: fill;
+}
+
+.vi-video-hr-title{
+    font-size: 16px;
+    font-weight: bold;
+    word-spacing: 2px;
+    margin-bottom: 5px;
+    line-height: 20px;
+}
+
+.vi-channel-hr-title{
+    font-size: 12px;
+    color: rgb(80, 80, 80);
+    line-height: 18px;
+    margin-bottom: 10px;
+}
+
+.vi-channel-hr-title i{
+    margin-left: 1px;
+    margin-right: 1px;
+}
+
+.vi-channel-hr-desc{
+    font-size: 12px;
+    color: rgb(80, 80, 80);
+    line-height: 18px;
+}
+/*video hoirzontal card end*/
