--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,17 @@ body{
     font-size: 16px;
     font-weight: bold;
 }
+
+.vi-container-title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.vi-container-title h5{
+    margin: 0;
+    font-weight: bold;
+}
 /*common CSS*/
 
 /*navbar css start*/
@@ -272,9 +283,103 @@ body{
     margin-right: 1px;
 }
 
+.vi-video-hr-mobile{
+    display: none;
+    font-size: 16px;
+    font-weight: bold;
+    word-spacing: 2px;
+    margin-bottom: 5px;
+    line-height: 20px;
+}
+
 .vi-channel-hr-desc{
     font-size: 12px;
     color: rgb(80, 80, 80);
     line-height: 18px;
 }
+
+
+@media screen and (max-width: 540px) {
+    .vi-card-hr{
+        display: flex;
+        flex-direction: column;
+        max-height: 100%;
+    }
+
+    .vi-card-hr .vi-card-hr-tumbnail{
+        width: 100%;
+        height: 200px;
+    }
+
+    .vi-video-hr-title{
+        display: none;
+    }
+
+    .vi-video-hr-mobile{
+        display: block;
+    }
+
+    .vi-card-hr .vi-card-hr-body .vi-channel-hr-desc{
+        display: none;
+    }
+}
 /*video hoirzontal card end*/
+
+/*video playlist card start*/
+.vi-playlist-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 15px;
+}
+
+.vi-playlist-card{
+    background: white;
+    border: solid 1px #e9e9e9;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    height: 100px;
+    width: 100%;
+    min-width: 250px;
+}
+
+.vi-playlist-body{
+    display: flex;
+    flex-direction: column;
+}
+
+.vi-playlist-body h5{
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.vi-playlist-body p{
+    margin: 0;
+}
+
+@media screen and (max-width: 992px) {
+    .vi-playlist-container{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 10px;
+    }
+ }
+
+ @media screen and (max-width: 768px) {
+    .vi-playlist-container{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+    }
+ }
+
+ @media screen and (max-width: 540px) {
+    .vi-playlist-container{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
+ }
+/*video playlist card end*/
