--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,47 @@ body{
     margin: 0;
     font-weight: bold;
 }
+
+.vi-card-menu{
+    position: relative;
+}
+
+.vi-card-dropdown{
+    position: absolute;
+    z-index: 5;
+    border: solid 1px #ccc;
+    width: 230px;
+    background: white;
+    display: none;
+}
+
+.vi-card-dropdown.vi-card-dropdown-active{
+    display: block;
+}
+
+.vi-card-dropdown ul{
+    list-style-type: none;
+    padding: 0;
+}
+
+.vi-card-dropdown ul li{
+    list-style-type: none;
+    display: block;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    cursor: pointer;
+}
+
+.vi-card-dropdown ul li i {
+    margin-right: 10px;
+    font-size: 18px;
+}
+
+.vi-card-dropdown ul li:hover{
+    background-color: rgba(0, 0, 0, 0.05);
+}
 /*common CSS*/
 
 /*navbar css start*/
@@ -204,6 +245,11 @@ body{
     flex-direction: column;
     max-width: 400px;
     cursor: pointer;
+    position: relative;
+}
+
+.vi-card-img{
+    position: relative;
 }
 
 .vi-card .vi-card-body{
@@ -231,6 +277,20 @@ body{
     font-size: 12px;
     color: rgb(80, 80, 80);
     line-height: 18px;
+}
+
+.vi-channel-views{
+    display: flex;
+}
+
+.vi-channel-views .vi-card-likes{
+    margin-left: 10px;
+    color: red;
+    font-size: 16px;
+}
+
+.vi-channel-views .vi-card-likes i{
+    padding-left: 5px;
 }
 /*video vertical card end*/
 
@@ -296,6 +356,16 @@ body{
     font-size: 12px;
     color: rgb(80, 80, 80);
     line-height: 18px;
+}
+
+.vi-channel-hr-title .vi-card-likes{
+    margin-left: 10px;
+    color: red;
+    font-size: 16px;
+}
+
+.vi-channel-hr-title .vi-channel-views .vi-card-likes i{
+    padding-left: 5px;
 }
 
 
