--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,26 @@ body{
     padding: 0.5rem 1.25rem;
 }
 
+.bui-auth {
+    max-width: 500px;
+    margin: 0 auto;
+    padding-top: 10rem;
+}
+
+.bui-auth-form {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.bui-btn-block {
+    width: 100%;
+}
+
+.bui-auth-form .bui-remember {
+    display: flex;
+    justify-content: space-between;
+}
+
 .bui-form-control:focus {
     color: #212529;
     background-color: #fff;
