--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ body{
     padding-top: 10rem;
 }
 
+.bui-auth .bui-card{
+    margin: 5px 10px;
+}
+
 .bui-auth-form {
     padding-left: 20px;
     padding-right: 20px;
@@ -162,7 +166,7 @@ body{
     padding-bottom: 5px;
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 .bui-navbar-search{
@@ -202,6 +206,7 @@ body{
     overflow: hidden;
     transition: all 0.5s ease;
     padding-top: var(--menu-top-size);
+    z-index: 1;
     
 }
 
@@ -474,3 +479,54 @@ body{
     }
  }
 /*video playlist card end*/
+
+/*video watch later start*/
+.vi-watchlater-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 5px;
+}
+
+.vi-watchlater-card{
+    background: white;
+    border: solid 1px #e9e9e9;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    cursor: pointer;
+    height: 100px;
+    width: 100%;
+    min-width: 250px;
+    gap: 15px;
+}
+
+.vi-watchlater-video{
+    width: 150px;
+    height: 80px;
+}
+
+.vi-watchlater-video img{
+     height: 100%;
+     width: 100%;  
+     object-fit: contain;
+}
+
+.vi-watchlater-body{
+    display: flex;
+    flex-direction: column;
+}
+
+.vi-watchlater-body h5{
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.vi-watchlater-body p{
+    margin: 0;
+    font-size: 12px;
+}
+
+.vi-watchlater-icon{
+    margin-left: auto;
+}
+/*video watch later end*/
