active menu link added.

--- a/src/components/sidebar/sidebar.style.css
+++ b/src/components/sidebar/sidebar.style.css
@@ -35,7 +35,7 @@
     background-color: rgba(0, 0, 0, 0.05);
 }
 
-.sidebar ul li.sidebar-menu-active{
+.sidebar ul a.sidebar-menu-active li{
     background-color: #E5E5E5;
 }
 
